agregando los productos al dashboard de products

--- a/screens/productos.html
+++ b/screens/productos.html
@@ -45,245 +45,6 @@
 
       <div class="productos__container">
 
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
-
-        <article class="product__card">
-          <div class="product__card__img-container">
-            <p>
-              <i class="bi bi-trash-fill"></i>
-              <i class="bi bi-pencil-fill"></i>
-            </p>
-
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <p class="product__card__id">
-            #1111111
-          </p>
-        </article>
-
 
       </div>
 
@@ -330,6 +91,10 @@
   <footer class="footer">
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
+
+
+  <script type="module" src="./../controllers/client-controller-2.js"></script>
+
 
   <script>
     const btnAgregarProducto = document.querySelector(".productos__header-btn");
