--- a/screens/index.html
+++ b/screens/index.html
@@ -61,47 +61,9 @@
 
         </header>
 
-        <div class="products__container">
+        <div class="products__container" id="StarWars">
 
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
 
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
 
         </div>
 
@@ -116,47 +78,9 @@
           </a>
         </header>
 
-        <div class="products__container">
+        <div class="products__container" id="Consolas">
 
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
 
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
         </div>
 
       </section>
@@ -170,53 +94,7 @@
           </a>
         </header>
 
-        <div class="products__container">
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-          <article class="product__card">
-            <div class="product__card__img-container">
-            </div>
-            <p class="product__card__title">Producto XYZ</p>
-            <span class="product__card__price">
-              $60,00
-            </span>
-            <a href="#" class="product__card__link">Ver producto</a>
-          </article>
-
-
-
-
-
-
+        <div class="products__container" id="Diversos">
         </div>
 
       </section>
