terminando de agregar la funcion de eliminar producto en el dashboard

--- a/screens/nuevo-producto.html
+++ b/screens/nuevo-producto.html
@@ -51,7 +51,11 @@
           <input class="input__url" type="text" name="URL" id="URL">
 
           <label class="label__categoria" for="categoria">Categoría</label>
-          <input class="input__categoria" type="text" name="categoria" id="categoria">
+          <select class="input__categoria" name="select">
+            <option value="StarWars">StarWars</option>
+            <option value="Consolas">Consolas</option>
+            <option value="Diversos" selected>Diversos</option>
+          </select>
 
           <label class="label__nombre" for="nombre">Nombre del producto</label>
           <input class="input__nombre" type="text" name="nombre" id="nombre">
