--- a/screens/actualizacion-completada.html
+++ b/screens/actualizacion-completada.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./../styles/producto-eliminado.css">
+  <link rel="stylesheet" href="./../styles/registro-completado.css">
 
 
   <title>Login - Comercio Electronico</title>
@@ -32,9 +32,9 @@
 
     <section class="section__registro-completado">
 
-      <i class="bi bi-trash-fill"></i>
+      <i class="bi bi-check-circle"></i>
       <h1 class="registro-completado__titulo">
-        ¡Producto eliminado exitosamente!
+        ¡Actualizacion del producto exitosa!
       </h1>
 
       <a class="registro-completado__btn" href="#">Ver productos</a>
