arreglando formularios de contacto y funcion de barra de busqueda

--- a/screens/busqueda.html
+++ b/screens/busqueda.html
@@ -102,6 +102,8 @@
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
 
+  <script src="./../controllers/validaciones-contacto.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="module" src="./../controllers/client-controller-5.js"></script>
   <script>
 
