--- a/screens/desafio-producto.html
+++ b/screens/desafio-producto.html
@@ -88,7 +88,8 @@
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="./../controllers/validaciones-contacto.js"></script>
   <script type="module" src="./../controllers/client-controller-4.js"></script>
 
   <script>
